# slurm_sweep

./: .cruft.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW_GUIDE.md  biome.jsonc  contributing.md  pyproject.toml  submit.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md
docs/notebooks/: example.ipynb
example/: config.yaml  example.ipynb  submit.sh  train.py
examples/: README.md  basic_config.yaml
examples/scrna_seq_embedding/: config_cpu.yaml  config_gpu.yaml  submit.sh  train.py  visualize_results.ipynb
examples/simple/: README.md  config.yaml  submit.sh
examples/single_cell_embedding/: README.md  config_cpu.yaml  config_gpu.yaml  pyproject.toml  submit.sh  train.py  visualize_results.ipynb
examples/single_cell_embedding/src/scembed/: __init__.py  aggregation.py  check.py  data_loader.py  evaluation.py  factory.py  utils.py
examples/single_cell_embedding/src/scembed/methods/: __init__.py  base.py  cpu_methods.py  gpu_methods.py
examples/spatial_embedding/: README.md  config_baseline.yaml  config_resolvi.yaml  config_scanvi.yaml  config_scvi.yaml  config_scviva.yaml  submit.sh  train.py  visualize_results.ipynb
src/slurm_sweep/: __init__.py  cli.py  constants.py  main.py  sweep_class.py  utils.py
tests/: conftest.py  test_basic.py  test_cli.py  test_config_validation.py  test_sweep_manager.py
